Reverted code back to current release Added new change log Numeric traits enforce minimums correctly Cursor is displayed at end of text for text traits Keyboard can now delete all text in text trait Files visible via external computer on export Exported files shared via Android intent

--- a/Field Book/res/layout/map.xml
+++ b/Field Book/res/layout/map.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:gridlayout="http://schemas.android.com/apk/res/com.fieldbook.tracker"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:background="#FFFFFF"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
 		<LinearLayout
 			android:layout_width="fill_parent"
