Certain actions disabled if data has not been imported

--- a/Field Book/res/layout/listitem_a.xml
+++ b/Field Book/res/layout/listitem_a.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
     android:paddingTop="20dp"
+    android:focusable="false"
     android:ellipsize="end"
     android:textSize="30dp"
     android:textStyle="bold" />
