--- a/Field Book/res/layout/genericdialog.xml
+++ b/Field Book/res/layout/genericdialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="500dp"
     android:background="#FFFFFF"
     android:orientation="vertical" >
 
@@ -9,13 +9,11 @@
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="#000000" />
-
     <ListView
         android:id="@+id/myList"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -34,6 +32,6 @@
             android:textSize="30dp"
             android:textStyle="bold" />
     </LinearLayout>
-    
+
     
 </LinearLayout>
