--- a/Field Book/res/layout/traitline.xml
+++ b/Field Book/res/layout/traitline.xml
@@ -40,22 +40,24 @@
 		android:id="@+id/copyBtn"
 		android:focusable="false"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"                
-        android:minWidth="70dp"
-        android:text="@string/copy"
+        android:layout_height="45dp"
+        android:minWidth="30dp"
+        android:text=""
         android:textColor="#000000"
         android:textSize="16dp"
+        android:drawableTop="@drawable/ic_action_copy"
         android:textStyle="bold" />
-				
+
 	<Button
 		android:id="@+id/delBtn"
 		android:focusable="false"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"                
-        android:minWidth="40dp"
-        android:text="@string/del"
+        android:layout_height="45dp"
+        android:minWidth="30dp"
+        android:text=""
         android:textColor="#000000"
         android:textSize="16dp"
+        android:drawableTop="@drawable/ic_action_discard"
         android:textStyle="bold" />
 
 	<TextView android:id="@+id/text2"
