--- a/Field Book/res/menu/mainmenu.xml
+++ b/Field Book/res/menu/mainmenu.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<menu xmlns:android="http://schemas.android.com/apk/res/android" >   
-	    <item android:id="@+id/help" android:title="@string/help" android:showAsAction="always" />  
-		<item android:id="@+id/settings" android:title="@string/settings" android:showAsAction="never" />"
-		<item android:id="@+id/search" android:title="@string/search" android:showAsAction="always" />"
-		<item android:id="@+id/map" android:title="@string/map" android:showAsAction="never" />"
-		<item android:id="@+id/resources" android:title="@string/resources" android:showAsAction="always" />"
-		<item android:id="@+id/quit" android:title="@string/quit" android:showAsAction="never" />"	
+	    <item
+            android:id="@+id/help"
+            android:title="@string/help"
+            android:icon="@drawable/ic_action_help"
+            android:showAsAction="always" />
+		<item
+            android:id="@+id/search"
+            android:title="@string/search"
+            android:icon="@drawable/ic_action_search"
+            android:showAsAction="always" />"
+		<item
+            android:id="@+id/map"
+            android:title="@string/map"
+            android:icon="@drawable/ic_action_map"
+            android:showAsAction="ifRoom|withText" />"
+		<item
+            android:id="@+id/resources"
+            android:title="@string/resources"
+            android:icon="@drawable/ic_action_collection"
+            android:showAsAction="always" />"
+        <item
+            android:id="@+id/settings"
+            android:title="@string/settings"
+            android:icon="@drawable/ic_action_settings"
+            android:showAsAction="always" />"
 	</menu>
 
