--- a/Field Book/res/values-v16/styles.xml
+++ b/Field Book/res/values-v16/styles.xml
@@ -4,26 +4,20 @@
 	<style name="Theme.Dialog" parent="android:Theme.Holo.Light.Dialog">
 	</style>
     
-	<style name="Theme.CustomDialog" parent="Theme.Sherlock.Light.Dialog">
+	<style name="Theme.CustomDialog" parent="@android:style/Theme.Holo.Light.Dialog">
 	    <item name="android:windowFullscreen">true</item>
 	    	    
 	    <item name="android:actionBarStyle">@style/Custom.ActionBar</item>
-	    <item name="actionBarStyle">@style/Custom.ActionBar</item>
-	    
+
 	    <item name="android:actionMenuTextAppearance">@style/Custom.MenuTextStyle</item>
-	    <item name="actionMenuTextAppearance">@style/Custom.MenuTextStyle</item>
-	            	    	    
+
 	</style>
     
-	<style name="Theme.Custom" parent="Theme.Sherlock.Light">
-	    <item name="android:windowFullscreen">true</item>
-	    	    
+	<style name="Theme.Custom" parent="@android:style/Theme.Holo.Light">
 	    <item name="android:actionBarStyle">@style/Custom.ActionBar</item>
-	    <item name="actionBarStyle">@style/Custom.ActionBar</item>
-	    
+
 	    <item name="android:actionMenuTextAppearance">@style/Custom.MenuTextStyle</item>
-	    <item name="actionMenuTextAppearance">@style/Custom.MenuTextStyle</item>
-	            	    	    
+
 	</style>
 	
 	<style name="Custom.MenuTextStyle"
@@ -32,13 +26,9 @@
 	    <item name="android:textSize">16dp</item>
 	</style>
 		
-	<style name="Custom.ActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid">
+	<style name="Custom.ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
 	    <item name="android:displayOptions">showHome|useLogo</item>
-	    <item name="displayOptions">showHome|useLogo</item>	    
+        <item name="android:background">#d0e1c7</item>
 	</style>
-	
-	<style name="Custom.MenuTextStyle" parent="@style/TextAppearance.Sherlock.Widget.ActionBar.Menu">
-	      <item name="android:textSize">16dp</item>
-	 </style>
 
 </resources>
