--- a/Field Book/res/layout/about.xml
+++ b/Field Book/res/layout/about.xml
@@ -7,6 +7,19 @@
     android:padding="20dp" >
 
     <TextView
+        android:id="@+id/tvVersion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:text="Version: "
+        android:textColor="#38c0f4"
+        android:textSize="25dp"
+        android:clickable="true"
+        android:textStyle="bold" />
+
+
+    <TextView
         android:id="@+id/developerMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dip"
         android:autoLink="email"
-        android:paddingBottom="10dp"
+        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:text="trife@ksu.edu"
         android:textColor="#000000"
@@ -102,7 +115,7 @@
         android:paddingLeft="10dp"
         android:text="Technology Projects"
         android:textColor="#000000"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold" />
 
     <TextView
@@ -110,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dip"
-        android:paddingBottom="10dp"
+        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:text="Solutions for mobile clients, server, and cloud-based computing."
         android:textColor="#000000"
