--- a/Field Book/res/menu/mainmenu.xml
+++ b/Field Book/res/menu/mainmenu.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-	<menu xmlns:android="http://schemas.android.com/apk/res/android" >   
-	    <item
+	<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+        <item
+            android:id="@+id/nextEmptyPlot"
+            android:title="@string/help"
+            android:icon="@drawable/ic_action_forward"
+            android:showAsAction="always" />
+        <item
+            android:id="@+id/jumpToPlot"
+            android:title="@string/help"
+            android:icon="@drawable/ic_action_barcode"
+            android:showAsAction="always" />
+        <item
             android:id="@+id/help"
             android:title="@string/help"
             android:icon="@drawable/ic_action_help"
