--- a/Field Book/res/values-v17/styles.xml
+++ b/Field Book/res/values-v17/styles.xml
@@ -23,6 +23,6 @@
 		
 	<style name="Custom.ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
 	    <item name="android:displayOptions">showHome|useLogo</item>
-        <item name="android:background">#d0e1c7</item>
+        <item name="android:background">#ffffff</item>
 	</style>
 </resources>
