--- a/Field Book/res/layout/parameter.xml
+++ b/Field Book/res/layout/parameter.xml
@@ -1,74 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="240dp"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="20dp" >
-    
-        <LinearLayout
-            android:layout_width="fill_parent"
+    android:padding="20dp">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp">
+
+        <TextView
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="10dp"
+            android:layout_gravity="center"
             android:paddingRight="10dp"
-            android:paddingTop="5dp" >
+            android:text="@string/direction"
+            android:textColor="#000000"
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
-	        <TextView
-	            android:text="@string/direction"
-	            android:layout_width="150dp"
-	            android:layout_height="wrap_content"
-	            android:layout_gravity="right"
-	            android:paddingRight="10dp"
-	            android:textColor="#000000"
-	            android:textSize="20dp"
-	            android:textStyle="bold" />
-            
-            <Spinner
-                android:id="@+id/direction"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:textSize="20dp"
-                android:textStyle="bold" />            
-            
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
+        <Spinner
+            android:id="@+id/direction"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp" >
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
-	        <TextView
-	            android:text="@string/orientation"
-	            android:layout_width="150dp"
-	            android:layout_height="wrap_content"
-	            android:layout_gravity="right"
-	            android:paddingRight="10dp"
-	            android:textColor="#000000"
-	            android:textSize="20dp"
-	            android:textStyle="bold" />
-            
-            <Spinner
-                android:id="@+id/orientation"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:textSize="20dp"
-                android:textStyle="bold" />            
-            
-        </LinearLayout>
-        
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp">
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingRight="10dp"
+            android:text="@string/orientation"
+            android:textColor="#000000"
+            android:textSize="25dp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/orientation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:paddingTop="20dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:paddingTop="20dp">
 
         <Button
             android:id="@+id/saveBtn"
@@ -80,12 +79,11 @@
             android:textColor="#000000"
             android:textSize="30dp"
             android:textStyle="bold" />
-        
+
         <View
             android:layout_width="20dp"
-            android:layout_height="wrap_content"                        
-        />
-        
+            android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/clearBtn"
             android:layout_width="wrap_content"
@@ -96,7 +94,7 @@
             android:textColor="#000000"
             android:textSize="30dp"
             android:textStyle="bold" />
-        
+
     </LinearLayout>
 
 </LinearLayout>
